@@ -1,5 +1,9 @@
 Release Notes
 
+* 7/11/2016
+  * added requestType
+  * added getOldMergeJobPandaIDs
+
 * 7/7/2016
   * added removeTags to AtlasAPP
 
